Salesforce/force-app/main/default/objects/Declaration_Metadata_Configuration__mdt/Declaration_Metadata_Configuration__mdt.object-meta.xml
<CustomObject>
    <description>The configuration for the different types of items being declared to ECM</description>
    <label>Declaration Metadata Configuration</label>
    <pluralLabel>Declaration Metadata Configurations</pluralLabel>
</CustomObject>