Salesforce/force-app/main/default/objects/Declaration_Metadata_Configuration__mdt/fields/Application_ID__c.field-meta.xml
<CustomField>
    <fullName>Application_ID__c</fullName>
    <inlineHelpText>The value to be placed into the props file as Application_ID</inlineHelpText>
    <label>Application_ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>