Salesforce/force-app/main/default/objects/Declaration_Metadata_Configuration__mdt/fields/Batch_Name__c.field-meta.xml
<CustomField>
    <fullName>Batch_Name__c</fullName>
    <description>Value to be sent to Declaration service as Batch Name</description>
    <label>Batch Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>