Salesforce/force-app/main/default/objects/Declaration_Metadata_Configuration__mdt/fields/Building_Name__c.field-meta.xml
<CustomField>
    <fullName>Building_Name__c</fullName>
    <label>Building Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>