Salesforce/force-app/main/default/objects/Declaration_Metadata_Configuration__mdt/fields/BX__c.field-meta.xml
<CustomField>
    <fullName>BX__c</fullName>
    <description>Value to be sent to Declaration service as BX</description>
    <label>BX</label>
    <length>255</length>
    <type>Text</type>
</CustomField>