Salesforce/force-app/main/default/objects/Declaration_Metadata_Configuration__mdt/fields/Case_ID__c.field-meta.xml
<CustomField>
    <fullName>Case_ID__c</fullName>
    <description>Value to be sent to Declaration service as Case ID</description>
    <label>Case ID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>