Salesforce/force-app/main/default/objects/Declaration_Metadata_Configuration__mdt/fields/CN_Number__c.field-meta.xml
<CustomField>
    <fullName>CN_Number__c</fullName>
    <inlineHelpText>Stores the Construction Notification Number aka Policy Number to ECM</inlineHelpText>
    <label>CN Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>