Salesforce/force-app/main/default/objects/Declaration_Metadata_Configuration__mdt/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <description>Value to be sent to Declaration service as Comments</description>
    <label>Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>