Salesforce/force-app/main/default/objects/Declaration_Metadata_Configuration__mdt/fields/Complainant_ID__c.field-meta.xml
<CustomField>
    <fullName>Complainant_ID__c</fullName>
    <description>Value to be sent to Declaration service as Complainant ID</description>
    <label>Complainant ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>