Salesforce/force-app/main/default/objects/Declaration_Metadata_Configuration__mdt/fields/Date_In__c.field-meta.xml
<CustomField>
    <fullName>Date_In__c</fullName>
    <description>Value to be sent to Declaration service as Date In</description>
    <label>Date In</label>
    <length>255</length>
    <type>Text</type>
</CustomField>