Salesforce/force-app/main/default/objects/Declaration_Metadata_Configuration__mdt/fields/Document_File_Name__c.field-meta.xml
<CustomField>
    <fullName>Document_File_Name__c</fullName>
    <label>Document File Name</label>
    <type>TextArea</type>
</CustomField>