Salesforce/force-app/main/default/objects/Declaration_Metadata_Configuration__mdt/fields/Document_Type__c.field-meta.xml
<CustomField>
    <fullName>Document_Type__c</fullName>
    <description>Value to be sent to Declaration service as Document Type</description>
    <label>Document Type</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>