Salesforce/force-app/main/default/objects/Declaration_Metadata_Configuration__mdt/fields/FileNo__c.field-meta.xml
<CustomField>
    <fullName>FileNo__c</fullName>
    <description>Value to be sent to Declaration service as FileNo</description>
    <label>FileNo</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>