Salesforce/force-app/main/default/objects/Declaration_Metadata_Configuration__mdt/fields/Folder__c.field-meta.xml
<CustomField>
    <fullName>Folder__c</fullName>
    <description>Value to be sent to Declaration service as Folder</description>
    <label>Folder</label>
    <length>255</length>
    <type>Text</type>
</CustomField>