Salesforce/force-app/main/default/objects/Declaration_Metadata_Configuration__mdt/fields/GroupType__c.field-meta.xml
<CustomField>
    <fullName>GroupType__c</fullName>
    <description>Value to be sent to Declaration service as GroupType</description>
    <label>GroupType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>