Salesforce/force-app/main/default/objects/Declaration_Metadata_Configuration__mdt/fields/Licence_ID__c.field-meta.xml
<CustomField>
    <fullName>Licence_ID__c</fullName>
    <description>Value to be sent to Declaration service as Licence ID</description>
    <label>Licence ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>