Salesforce/force-app/main/default/objects/Declaration_Metadata_Configuration__mdt/fields/Mail_From__c.field-meta.xml
<CustomField>
    <fullName>Mail_From__c</fullName>
    <description>Value to be sent to Declaration service as Mail From</description>
    <label>Mail From</label>
    <length>255</length>
    <type>Text</type>
</CustomField>