Salesforce/force-app/main/default/objects/Declaration_Metadata_Configuration__mdt/fields/Mail_To__c.field-meta.xml
<CustomField>
    <fullName>Mail_To__c</fullName>
    <description>Value to be sent to Declaration service as Mail To</description>
    <label>Mail To</label>
    <length>255</length>
    <type>Text</type>
</CustomField>