Salesforce/force-app/main/default/objects/Declaration_Metadata_Configuration__mdt/fields/Markout_Code__c.field-meta.xml
<CustomField>
    <fullName>Markout_Code__c</fullName>
    <description>Value to be sent to Declaration service as Markout Code</description>
    <label>Markout Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>