Salesforce/force-app/main/default/objects/Declaration_Metadata_Configuration__mdt/fields/MeridioDocumentCategory__c.field-meta.xml
<CustomField>
    <fullName>MeridioDocumentCategory__c</fullName>
    <description>Value to be sent to Declaration service as MeridioDocumentCategory</description>
    <label>MeridioDocumentCategory</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>