Salesforce/force-app/main/default/objects/Declaration_Metadata_Configuration__mdt/fields/MoreDetailedName__c.field-meta.xml
<CustomField>
    <fullName>MoreDetailedName__c</fullName>
    <description>Value to be sent to Declaration service as MoreDetailedName</description>
    <label>MoreDetailedName</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>