Salesforce/force-app/main/default/objects/Declaration_Metadata_Configuration__mdt/fields/NamingConvention__c.field-meta.xml
<CustomField>
    <fullName>NamingConvention__c</fullName>
    <description>Value to be sent to Declaration service as NamingConvention</description>
    <label>NamingConvention</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>