Salesforce/force-app/main/default/objects/Declaration_Metadata_Configuration__mdt/fields/Originating_Author__c.field-meta.xml
<CustomField>
    <fullName>Originating_Author__c</fullName>
    <description>Value to be sent to Declaration service as Originating Author</description>
    <label>Originating Author</label>
    <length>255</length>
    <type>Text</type>
</CustomField>