Salesforce/force-app/main/default/objects/Declaration_Metadata_Configuration__mdt/fields/Owner_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Owner_Contact_Email__c</fullName>
    <label>Owner Contact Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>