Salesforce/force-app/main/default/objects/Declaration_Metadata_Configuration__mdt/fields/Owner_Contact_Organisation__c.field-meta.xml
<CustomField>
    <fullName>Owner_Contact_Organisation__c</fullName>
    <label>Owner Contact Organisation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>