Salesforce/force-app/main/default/objects/Declaration_Metadata_Configuration__mdt/fields/Owner_Street_Type__c.field-meta.xml
<CustomField>
    <fullName>Owner_Street_Type__c</fullName>
    <label>Owner Street Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>