Salesforce/force-app/main/default/objects/Declaration_Metadata_Configuration__mdt/fields/ParentCase__c.field-meta.xml
<CustomField>
    <fullName>ParentCase__c</fullName>
    <description>Value to be sent to Declaration service as ParentCase</description>
    <label>ParentCase</label>
    <length>255</length>
    <type>Text</type>
</CustomField>