Salesforce/force-app/main/default/objects/Declaration_Metadata_Configuration__mdt/fields/Property_Postcode__c.field-meta.xml
<CustomField>
    <fullName>Property_Postcode__c</fullName>
    <label>Property Postcode</label>
    <length>250</length>
    <type>Text</type>
</CustomField>