Salesforce/force-app/main/default/objects/Declaration_Metadata_Configuration__mdt/fields/Property_State__c.field-meta.xml
<CustomField>
    <fullName>Property_State__c</fullName>
    <label>Property State</label>
    <length>250</length>
    <type>Text</type>
</CustomField>