Salesforce/force-app/main/default/objects/Declaration_Metadata_Configuration__mdt/fields/Property_Street_Name__c.field-meta.xml
<CustomField>
    <fullName>Property_Street_Name__c</fullName>
    <label>Property Street Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>