Salesforce/force-app/main/default/objects/Declaration_Metadata_Configuration__mdt/fields/Property_Street_Type__c.field-meta.xml
<CustomField>
    <fullName>Property_Street_Type__c</fullName>
    <label>Property Street Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>