Salesforce/force-app/main/default/objects/Declaration_Metadata_Configuration__mdt/fields/Property_Suburb__c.field-meta.xml
<CustomField>
    <fullName>Property_Suburb__c</fullName>
    <label>Property Suburb</label>
    <length>250</length>
    <type>Text</type>
</CustomField>