Salesforce/force-app/main/default/objects/Declaration_Metadata_Configuration__mdt/fields/Related_Customer_Field__c.field-meta.xml
<CustomField>
    <fullName>Related_Customer_Field__c</fullName>
    <inlineHelpText>The field prefix for the related customer eg Account, Customer__r or Related_Customer__r.  This is used to add in name and customer number fields</inlineHelpText>
    <label>Related Customer Field</label>
    <length>128</length>
    <type>Text</type>
</CustomField>