Salesforce/force-app/main/default/objects/Declaration_Metadata_Configuration__mdt/fields/Respondent_Id__c.field-meta.xml
<CustomField>
    <fullName>Respondent_Id__c</fullName>
    <description>Value to be sent to Declaration service as Respondent Id</description>
    <label>Respondent Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>