Salesforce/force-app/main/default/objects/Declaration_Metadata_Configuration__mdt/fields/ServiceType__c.field-meta.xml
<CustomField>
    <fullName>ServiceType__c</fullName>
    <description>Value to be sent to Declaration service as ServiceType</description>
    <label>ServiceType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>