Salesforce/force-app/main/default/objects/Declaration_Metadata_Configuration__mdt/fields/SFN__c.field-meta.xml
<CustomField>
    <fullName>SFN__c</fullName>
    <description>Value to be sent to Declaration service as SFN</description>
    <label>SFN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>