Salesforce/force-app/main/default/objects/Declaration_Metadata_Configuration__mdt/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <description>Value to be sent to Declaration service as Subject</description>
    <label>Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>