Salesforce/force-app/main/default/objects/Declaration_Metadata_Configuration__mdt/fields/Workflow__c.field-meta.xml
<CustomField>
    <fullName>Workflow__c</fullName>
    <description>Value to be sent to Declaration service as Workflow</description>
    <label>Workflow</label>
    <length>255</length>
    <type>Text</type>
</CustomField>