Salesforce/force-app/main/default/objects/Declaration_Metadata_Configuration__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>Document_Type__c</columns>
    <columns>MeridioDocumentCategory__c</columns>
    <columns>MoreDetailedName__c</columns>
    <columns>FileNo__c</columns>
    <columns>Case_ID__c</columns>
    <columns>GroupType__c</columns>
    <columns>ServiceType__c</columns>
    <columns>Related_Customer_Field__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>