Salesforce/force-app/main/default/objects/Declaration_Metadata_Configuration__mdt/listViews/Internal.listView-meta.xml
<ListView>
    <fullName>Internal</fullName>
    <columns>MasterLabel</columns>
    <columns>Document_Type__c</columns>
    <columns>MeridioDocumentCategory__c</columns>
    <columns>MoreDetailedName__c</columns>
    <columns>FileNo__c</columns>
    <columns>Case_ID__c</columns>
    <columns>GroupType__c</columns>
    <columns>ServiceType__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
            <field>Document_Type__c</field>
            <operation>notEqual</operation>
            <value>Online Form</value>
        </filters>
    <label>Internal</label>
    <language>en_US</language>
</ListView>